--- a/css/layouts.less
+++ b/css/layouts.less
@@ -88,7 +88,6 @@ x-view, x-listview {
 
     > header h1 {
         margin: 0;
-        margin-top: 4pt;
         padding: 0;
         font-size: 2em;
         line-height: 40pt;
@@ -102,6 +101,6 @@ x-view, x-listview {
     }
 }
 
-x-listview .contents {
+x-listview > ._contents > .contents {
     padding: 0;
 }
