play around with x-viewgroup

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -6,11 +6,14 @@ body {
   overflow: hidden;
 }
 .loading {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: white;
   text-align: center;
-  margin-top: 5em;
+  padding-top: 5em;
   color: #dddddd;
 }
 .list ul {
@@ -24,14 +27,23 @@ body {
   border-top: 1px solid grey;
   cursor: pointer;
 }
-#app ._contents {
-  display: block;
-  width: 100%;
-  height: 100%;
+/* #app ._contents { */
+/*     display: block; */
+/*     width: 100%; */
+/*     height: 100%; */
+/* } */
+x-view[data-layout=manual] {
+  /* height: 100%; */
+
+  /* width: 100%; */
+
 }
 x-view,
 x-listview {
   background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 x-view > header,
 x-listview > header,
@@ -96,6 +108,8 @@ x-listview > ._contents {
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
+  width: 100%;
+  height: 100%;
 }
 x-listview > ._contents > .contents {
   padding: 0;
