--- a/css/layouts.css
+++ b/css/layouts.css
@@ -14,7 +14,7 @@ body {
   background-color: white;
   text-align: center;
   padding-top: 5em;
-  color: #dddddd;
+  color: #aaaaaa;
 }
 .list ul {
   list-style: none;
@@ -44,6 +44,8 @@ x-listview {
   position: absolute;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
 }
 x-view > header,
 x-listview > header,
