--- a/css/layouts.less
+++ b/css/layouts.less
@@ -16,7 +16,7 @@ html, body {
     background-color: white;
     text-align: center;
     padding-top: 5em;
-    color: #dddddd;
+    color: #aaaaaa;
 }
 
 .list ul {
@@ -48,6 +48,9 @@ x-view, x-listview {
     position: absolute;
     top: 0;
     left: 0;
+
+    height: 100%;
+    width: 100%;
 
     > header, > footer {
         overflow: hidden;
