--- a/css/layouts.less
+++ b/css/layouts.less
@@ -45,6 +45,7 @@ x-view[data-layout=manual]  {
 
 x-view, x-listview {
     background-color: white;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
@@ -121,4 +122,7 @@ x-view, x-listview {
 
 x-listview > ._contents > .contents {
     padding: 0;
+}
+
+@keyframes slideIn {
 }
