refactor animations, add flip and flipOut animation

--- a/css/layouts.less
+++ b/css/layouts.less
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .loading {
@@ -15,7 +15,6 @@ html, body {
     height: 100%;
     background-color: white;
     text-align: center;
-    padding-top: 5em;
     color: #aaaaaa;
 }
 
@@ -32,15 +31,14 @@ html, body {
     cursor: pointer;
 }
 
-/* #app ._contents { */
-/*     display: block; */
-/*     width: 100%; */
-/*     height: 100%; */
-/* } */
-
-x-view[data-layout=manual]  {
-    /* height: 100%; */
-    /* width: 100%; */
+.anim-background {
+    width: 100%;
+    height: 100%;
+    background-color: #dddddd;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 10000;
 }
 
 x-view, x-listview {
@@ -52,6 +50,11 @@ x-view, x-listview {
 
     height: 100%;
     width: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
 
     > header, > footer {
         overflow: hidden;
