--- a/css/layouts.css
+++ b/css/layouts.css
@@ -3,7 +3,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
+
 }
 .loading {
   position: absolute;
@@ -13,7 +14,6 @@ body {
   height: 100%;
   background-color: white;
   text-align: center;
-  padding-top: 5em;
   color: #aaaaaa;
 }
 .list ul {
@@ -27,16 +27,14 @@ body {
   border-top: 1px solid grey;
   cursor: pointer;
 }
-/* #app ._contents { */
-/*     display: block; */
-/*     width: 100%; */
-/*     height: 100%; */
-/* } */
-x-view[data-layout=manual] {
-  /* height: 100%; */
-
-  /* width: 100%; */
-
+.anim-background {
+  width: 100%;
+  height: 100%;
+  background-color: #dddddd;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 10000;
 }
 x-view,
 x-listview {
@@ -47,6 +45,11 @@ x-listview {
   left: 0;
   height: 100%;
   width: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 }
 x-view > header,
 x-listview > header,
