add slideUp and slideDown animations, add ability for buttons to specify animations

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -45,6 +45,7 @@ x-listview {
   left: 0;
   height: 100%;
   width: 100%;
+  animation-timing-function: ease-out;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
