--- a/css/layouts.less
+++ b/css/layouts.less
@@ -50,6 +50,8 @@ x-view, x-listview {
 
     height: 100%;
     width: 100%;
+
+    animation-timing-function: ease-out;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
