optimize for mobile (touch, drag, etc)

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -3,8 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  /* overflow: hidden; */
-
+  overflow: hidden;
 }
 .loading {
   position: absolute;
@@ -45,7 +44,8 @@ x-listview {
   left: 0;
   height: 100%;
   width: 100%;
-  animation-timing-function: ease-out;
+  /* animation-timing-function: ease-out; */
+
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -120,6 +120,9 @@ x-listview > ._contents {
 }
 x-listview > ._contents > .contents {
   padding: 0;
+}
+._list li.highlighted {
+  background-color: #99bbdd;
 }
 @keyframes slideIn {
   
